<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="HesapExtresiStr">Hesap Extresi</string>
    <string name="KasaDefteriStr">Kasa Defteri</string>
    <string name="cert_label">Certificate</string>
    <string name="private_key_label">Private Key</string>
    <string name="keychain_label">Key Chain Installation</string>
    <string name="keychain_install">Install</string>
    <string name="keychain_installed">Installed</string>
    <string name="server_label">Simple SSL Web Server</string>
    <string name="server_start">Bağlantıya İzin Ver</string>
    <string name="server_stop">Bağlantıyı Kapat</string>
    <string name="test_ssl">Test</string>
    <string name="ticker_text">Starting KeyChainDemo SSL Server</string>
    <string name="notification_title">KeyChainDemo SSL Server</string>
    <string name="notification_message">Click to stop the server</string>
    <string name="addDialogTitle">New Entry</string>
    <string name="addItem">Add Item</string>
    <string name="cancelItem">Cancel</string>
    <string name="country_prompt">Choose a country</string>
    <string name="footer">This is a demo of the ListView. Click and hold on to one of the items above to show the context menu.</string>
    <string name="title_activity_main">alim</string>
    <string name="title_activity_main_dbprops">Hesap Sahibi Bilgileri</string>
    <string name="title_activity_cari">Cari Hesaplar</string>
    <string name="title_activity_stok">Stok</string>
    <string name="title_activity_kasa">Kasa</string>
    <string name="title_activity_banka">Banka</string>
    <string name="title_activity_kasa_kartlari">Kasa Hesapları</string>
    <string name="title_activity_kasa_karti">Kasa Kartı</string>
    <string name="title_activity_kasa_islemler">Cari Hesap İşlemleri</string>
    <string name="title_activity_kasa_tahsilat">Kasa Tahsilat</string>
    <string name="title_activity_kasa_odeme">Kasa Ödeme</string>
    <string name="title_activity_kasa_virman">Kasalar Arası Aktarım</string>
    <string name="title_activity_kasa_extre">Kasa Defteri</string>
    <string name="title_activity_banka_kartlari">Banka Hesapları</string>
    <string name="title_activity_banka_karti">Banka Hesabı</string>
    <string name="title_activity_banka_islemler">Banka İşlemleri</string>
    <string name="title_activity_banka_yatan">Bankaya Yatırılan</string>
    <string name="title_activity_banka_cekilen">Bankadan Çekilen</string>
    <string name="title_activity_banka_virman">Banka Hesapları Arası Virman</string>
    <string name="title_activity_banka_extre">Banka Hesap Extresi</string>
    <string name="title_activity_cari_hesap_kartlari">Cari Hesaplar</string>
    <string name="title_activity_cari_hesap_karti">Cari Hesap Kartı</string>
    <string name="title_activity_cari_islemler">Cari Hesap İşlemleri</string>
    <string name="title_activity_cari_tahsilat">Cari Hesap Tahsilat</string>
    <string name="title_activity_cari_odeme">Cari Hesap Ödeme</string>
    <string name="title_activity_cari_borclandir">Cari Hesap Borçlandır</string>
    <string name="title_activity_cari_alacaklandir">Cari Hesap Alacaklandır</string>
    <string name="title_activity_cari_virman">Cari Hesaplar Arası Virman</string>
    <string name="title_activity_cari_extre">Cari Hesap Extresi</string>
    <string name="title_activity_settings">Ayarlar</string>
    <string name="title_activity_tools">Araçlar</string>
    <string name="title_activity_DovizKurlari">Online Döviz Kurları</string>
    <string name="title_activity_systeminfo">Sistem Bilgisi</string>
    <string name="title_activity_pb_kartlari">Para Birimleri</string>
    <string name="title_activity_pb_karti">Para Birimi</string>
    <string name="title_activity_varlik">Varlıklarım</string>
    <string name="title_activity_varlik_kartlari">Varlıklarım</string>
    <string name="title_activity_varlik_karti">Varlık Bilgileri</string>
    <string name="title_activity_rapor_geneldurum">Genel Durum Raporu</string>
    <string name="soruisareti">\?</string>
    <string name="sagaikiok">>></string>
    <string name="app_name">alim</string>
    <string name="menu_settings">Ayarlar</string>
    <string name="AyarlarStr1">Ayarlar</string>
    <string name="KaydetStr">Kaydet</string>
    <string name="QuitStr">Çıkış</string>
    <string name="strAnaMenu">Ana Menü</string>
    <string name="strSendMail">eposta Gönder</string>
    <string name="DetayStr">Detaylar</string>
    <string name="TamamStr">Tamam</string>
    <string name="IptalStr">İptal</string>
    <string name="strBack">&lt;&lt;</string>
    <string name="SilStr">Sil</string>
    <string name="DegistirStr">Değiştir</string>
    <string name="EkleStr">Ekle</string>
    <string name="SecStr">Seç</string>
    <string name="VazgecStr">Vazgeç</string>
    <string name="TutarStr">Tutar</string>
    <string name="TarihStr">Tarih</string>
    <string name="SaatStr">Saat</string>
    <string name="GeriYukleStr">Geri Yükle</string>
    <string name="HesapKoduStr">Hesap Kodu</string>
    <string name="HesapAdiStr">Hesap Adı</string>
    <string name="YontemiStr">Yöntemi</string>
    <string name="UcNoktaStr">…</string>
    <string name="StokKartlariStr">Stok Kartları</string>
    <string name="IslemlerStr">İşlemler</string>
    <string name="RaporlarStr">Raporlar</string>
    <string name="TahsilatStr">Tahsilat</string>
    <string name="BorclandirStr">Borçlandır</string>
    <string name="AlacaklandirStr">Alacaklandır</string>
    <string name="VirmanStr">Virman</string>
    <string name="DegisimStr">Başka Kasaya Aktar</string>
    <string name="OdemeStr">Ödeme</string>
    <string name="BulStr">Bul</string>
    <string name="AciklamaStr">Açıklama</string>
    <string name="MainScreen1">---</string>
    <string name="MainScreen2">Alyans Yazılım</string>
    <string name="MainScreen3">İleri Muhasebe Sistemi</string>
    <string name="MainScreen4">ÂLİM</string>
    <string name="IslemTuruStr">İşlem Türü</string>
    <string name="TelefonNumarasiStr">Telefon Numarası</string>
    <string name="EpostaStr">e-posta</string>
    <string name="ParaBirimiStr">Para Birimi</string>
    <string name="YatirilanStr">Yatırılan</string>
    <string name="CekilenStr">Çekilen</string>
    <string name="OdemeAraciStr">Ödeme Aracı</string>
    <string name="AraclarStr">Araçlar</string>
    <string name="SiraNumarasiStr">Sıra Numarası</string>
    <string name="YerelParaBirimiStr">Yerel Para Birimi</string>
    <string name="LabelStr">[Label]</string>
    <string name="YenileStr">Yenile</string>
    <string name="VarliklarimStr">Varlıklarım</string>
    <string name="IslemZamaniStr">İşlem Zamanı</string>
</resources>
