<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:id="@id/tableRow5" android:layout_width="wrap_content">
            <Button android:id="@id/btCariKartlar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_activity_cari_hesap_kartlari" android:layout_weight="75.0" />
            <Button android:id="@id/btCari" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sagaikiok" android:layout_weight="25.0" />
        </TableRow>
        <TableRow android:id="@id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/btKasaKartlar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_activity_kasa_kartlari" android:layout_weight="75.0" />
            <Button android:id="@id/btKasa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sagaikiok" android:layout_weight="25.0" />
        </TableRow>
        <TableRow android:id="@id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/btBankaKartlar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_activity_banka_kartlari" android:layout_weight="75.0" />
            <Button android:id="@id/btBanka" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sagaikiok" android:layout_weight="25.0" />
        </TableRow>
        <TableRow android:id="@id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/btVarlikKartlar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/VarliklarimStr" android:layout_weight="75.0" />
            <Button android:id="@id/btVarliklar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sagaikiok" android:layout_weight="25.0" />
        </TableRow>
        <TableRow android:id="@id/tableRow8" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/btStokKartlar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/StokKartlariStr" android:layout_weight="75.0" />
            <Button android:id="@id/btStok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sagaikiok" android:layout_weight="25.0" />
        </TableRow>
        <Button android:id="@id/btGenelRaporlar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/RaporlarStr" android:layout_weight="100.0" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/btAraclar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AraclarStr" android:layout_weight="100.0" />
            <Button android:id="@id/btAyarlar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_settings" android:layout_weight="100.0" />
        </LinearLayout>
    </TableLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="99.0">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MainScreen2" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="bottom|center" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MainScreen3" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="bottom|center" android:id="@id/lbMainScreen4a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MainScreen4" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_gravity="center" android:id="@id/lbMainScreenVers" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MainScreen1" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:id="@id/lbUsd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/UcNoktaStr" android:layout_weight="1.0" />
        <TextView android:gravity="center" android:id="@id/lbEuro" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/UcNoktaStr" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
