<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/btKartlar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_activity_banka_kartlari" />
    <Button android:id="@id/btIslemler" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/IslemlerStr" />
    <Button android:id="@id/Button02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/RaporlarStr" />
    <Button android:id="@id/btMainMenu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strAnaMenu" />
</LinearLayout>
