<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal" android:id="@id/rowLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/first" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TarihStr" />
    <TextView android:id="@id/last" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/HesapAdiStr" android:layout_toRightOf="@id/first" />
    <TextView android:id="@id/bky" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/TutarStr" android:layout_alignParentRight="true" />
    <TextView android:textStyle="bold|italic" android:textColor="#ff8f8f8f" android:id="@id/tlf" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/IslemTuruStr" android:layout_below="@id/first" android:layout_alignParentLeft="true" />
</RelativeLayout>
