<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal" android:id="@id/rowLayout" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/first" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/HesapKoduStr" />
    <TextView android:id="@id/last" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/HesapAdiStr" android:layout_toRightOf="@id/first" />
    <TextView android:gravity="center_vertical" android:id="@id/pb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="PB" android:width="40.0dip" android:layout_alignBottom="@id/TextView01" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <TextView android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/UcNoktaStr" android:layout_below="@id/first" android:layout_alignParentLeft="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/bky" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/TutarStr" android:layout_toLeftOf="@id/pb" android:layout_alignBottom="@id/TextView01" android:layout_alignParentTop="true" />
</RelativeLayout>
