<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btBack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strBack" />
        <Button android:id="@id/btSave" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/KaydetStr" android:layout_weight="0.69" />
        <Button android:id="@id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SilStr" />
    </LinearLayout>
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TableRow android:id="@id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/HesapKoduStr" />
                <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/lbBanKod" android:background="@drawable/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/HesapKoduStr" />
            </TableRow>
            <TableRow android:id="@id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/HesapAdiStr" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/lbBanAd" android:background="@drawable/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/HesapAdiStr" />
            </TableRow>
            <TableRow android:id="@id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TutarStr" />
                <EditText android:id="@id/edTutar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:inputType="numberDecimal">
                    <requestFocus />
                </EditText>
            </TableRow>
            <TableRow android:id="@id/tableRow5" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AciklamaStr" />
                <AutoCompleteTextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/edAciklama" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textAutoComplete" />
            </TableRow>
            <TableRow android:id="@id/tableRow7" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_gravity="center_vertical" android:id="@id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/IslemZamaniStr" />
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:id="@id/edTarih" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:onClick="btTarihChClick" />
                    <Button android:id="@id/edSaat" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:onClick="btSaatChClick" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
